fix: Ajuste no z-index do btn voltar em relação ao menu esquerdo

--- a/src/pages/00_menu/style.less
+++ b/src/pages/00_menu/style.less
@@ -343,7 +343,7 @@ section{
 }
 
 .inativo{
-  // pointer-events: none;
+  pointer-events: none;
   filter: grayscale(100%);
   opacity: 0.5;
 }
